--- a/TODO
+++ b/TODO
@@ -1,4 +1,8 @@
-- 4pm call tim, see about cancel.
+On index.js need to call compositeLayoutModel new function to
+take "runs" and format it in a way handle_success (from Callspot) can handle
+    * then call that function and fill up ST.cali_obj_by_key
+    * then call augment_first_run.
+    
 For Nov 4th
 DONE - Stop wrap around from happening for the horizontal bar charts.
 DONE - Get a new icon for memory view: it should have to do with time series, maybe a set of line graphs.
