--- a/TODO
+++ b/TODO
@@ -9,8 +9,7 @@ FIXED - not loading issue -> related to layout not loaded early on.
     * jupyter will always be there.
 - strcon to strcat
 DONE - attributions to the help repo, move somewhere else.
-- start with a default name that makes sense: maybe whatever is in the first drop down.
-    * $('.composite_chart_type .dimension_attribute').val();
+DONE - start with a default name that makes sense: maybe whatever is in the first drop down.
 - Xaxis, GroupBy, Chart name all the same. (things should not have multiple names)
     * instead of strcon, use a space.
     * default names, +,-,/,*
