--- a/TODO
+++ b/TODO
@@ -17,6 +17,8 @@ DONE - update drop down list as soon as they add the graph, instead of making th
 DONE - need to update compare view when deleting as well.
 DONE - Error message: (name && dimension) When creating a new composite that has the same name of something that already exists, there needs to be an error
 
+
+- For ScatterPlot, change the select drop down contents.
 - AFter an Edit of a chart name, need to edit the compare view version as well.
 BUG - when updating the name of the chart, the table column doesn't update.
 - The type should not always be "int" in CompositeLayoutModel:
