--- a/TODO
+++ b/TODO
@@ -1,22 +1,36 @@
+- why figure_of_merit+region_cost makes a horizontal bar chart instead of vertical bar chart when data is 10K+.
+    * This is because there was one data in there that was a string.  If even one data is a string then it becomes a Piechart/HorizontalBarChart.
 
-DONE - For the icons: Get a BE data to see whether timeseries data is there.
-    * spot.py Line 254.  Need to get OGlobals.options which should contain the string "timeseries", just check the latest david's data.
+- Why does wall time not work for data where that comes from timeseries enabled.
+- spot.channel is not a metric - don't show it on durations page.
+- As for hiding Spot.channel:
+    * I see it on the walltime page.  But which comparison metric dropdown are you talking about?
+
+- As for the attribute aliases on the walltimes page.  Those aliases were added after Joe implemented that page, so I that’s why it doesn’t use those aliases.  I’ll need to look into that.
+
+
+- Start browser testing
+    * account testing -> from other accounts.
+    * DONE - ping Matt once done testing so he can start
+    .
+
+DONE - Only show Icons for data analysis that are available
     * jupyter/walltime will always be there.
+    * timeseries is optional, thus icon is optional.
 DONE - Xaxis, GroupBy, Chart name all the same. (things should not have multiple names)
 DONE - instead of strcon, use a space.
 
 FIXED - not loading issue -> related to layout not loaded early on.
 DONE - strcon to strcat
-DONE - attributions to the help repo, move somewhere else.
+DONE - attributions to the very bottom, move somewhere else.
 DONE - start with a default name that makes sense: maybe whatever is in the first drop down.
 DONE - Add this to list of things to test: /usr/gapps/spot/datasets/demos/mpi
 
 DONE - update drop down list as soon as they add the graph, instead of making them refresh.
-    * should we just do it from index.js 197.
-    * need to enable source maps in the transpilation process in order to debug where the funcs came from.
 DONE - need to update compare view when deleting as well.
 DONE - Error message: (name && dimension) When creating a new composite that has the same name of something that already exists, there needs to be an error
 DONE - For add new plot screen, when ScatterPlot is selected, change the select drop down contents to just ints.
+
 
 
 - AFter an Edit of a chart name, need to edit the compare view version as well.
@@ -26,6 +40,11 @@ BUG - when updating the name of the chart, the table column doesn't update.
                             type: "int",
                             value: val
                         }
+- Switch Jupyter Icon from Saturn to Jupyter.
+
+
+    * should we just do it from index.js 197.
+    * need to enable source maps in the transpilation process in order to debug where the funcs came from.
 
 
 DONE - On index.js need to call compositeLayoutModel new function to
